--- a/assets/style/foptimal.css
+++ b/assets/style/foptimal.css
@@ -1423,22 +1423,24 @@
                     }
                     
                     .col-sm-2 #getin__touch .btn {
-                        width: 171px;
-                        height: 55px;
+                        width: 171px !important;
+                        height: 55px !important;
                         margin-top: 20px;
                     }
                     
                     #getin__touch {
+                        width: 171px !important;
+                        height: 55px !important;
+                        margin-left: 170px !important;
                         margin-top: 45px;
-                        margin-left: 5px !important;
+                        margin-right: -41px !important;
                     }
                     
                     .col-sm-2 button {
-                        width: 171px;
-                        height: 55px;
+                        margin-left: 10px !important;
+                        padding-left: 0px !important;
                         border: 1px solid #FFFFFF;
                         box-sizing: border-box;
-                        margin-left: 150px !important;
                         font-family: Poppins;
                         font-style: normal;
                         font-weight: normal;
