--- a/assets/style/foptimal.css
+++ b/assets/style/foptimal.css
@@ -1421,15 +1421,15 @@
                         display: -webkit-box;
                         -webkit-line-clamp: 3;
                     }
-                    
-                    .col-sm-2 #getin__touch .btn {
-                        width: 171px !important;
+                    /* .col-sm-2 #getin__touch .btn {
+                        max-width: 171px !important;
                         height: 55px !important;
                         margin-top: 20px;
                     }
+                     */
                     
                     #getin__touch {
-                        width: 171px !important;
+                        max-width: 171px!important;
                         height: 55px !important;
                         margin-left: 170px !important;
                         margin-top: 45px;
@@ -1437,8 +1437,9 @@
                     }
                     
                     .col-sm-2 button {
-                        margin-left: 10px !important;
-                        padding-left: 0px !important;
+                        width: 171px!important;
+                        height: 55px !important;
+                        margin-left: -13px !important;
                         border: 1px solid #FFFFFF;
                         box-sizing: border-box;
                         font-family: Poppins;
