--- a/assets/style/responsive.css
+++ b/assets/style/responsive.css
@@ -102,20 +102,6 @@
                                           display: -webkit-box;
                                           -webkit-line-clamp: 1;
                                       }
-                                      .contact a {
-                                          width: 106px;
-                                          height: 21px;
-                                          margin: 0;
-                                          padding: 0;
-                                          font-family: ABeeZee;
-                                          font-style: normal;
-                                          font-weight: normal;
-                                          font-size: 18px;
-                                          line-height: 21px;
-                                          text-align: center;
-                                          align-items: center;
-                                          color: #FFFFFF;
-                                      }
                                       /* a {
                                           color: #FFFFFF;
                                       } */
@@ -540,8 +526,7 @@
                                           width: 100%;
                                           position: absolute;
                                           bottom: 26px;
-                                          top: 26px;
-                                          left: 51px;
+                                          margin-left: 50px !important;
                                           object-fit: cover;
                                           z-index: 1
                                       }
@@ -552,14 +537,14 @@
                                       .text-left2 {
                                           width: 100%;
                                           height: auto;
-                                          margin-left: -5px;
+                                          /* margin-left: -5px; */
                                           margin-top: 10px;
                                       }
                                       .our__flex {
                                           width: 50%;
                                           height: auto;
                                           margin-top: -80px;
-                                          margin-left: 300px;
+                                          margin-left: 400px !important;
                                           display: flex;
                                       }
                                       .line__2 {
@@ -590,13 +575,11 @@
                                           max-width: 100%;
                                           height: auto;
                                           margin-top: 830px;
-                                          /* display: block; */
                                           justify-content: center;
                                       }
                                       .container #section3__row {
                                           width: 100%;
                                           height: auto;
-                                          /* flex-wrap: wrap; */
                                           display: block;
                                           justify-content: center;
                                       }
@@ -629,12 +612,18 @@
                                           flex-wrap: wrap;
                                           justify-content: center;
                                       }
+                                      .section3__column2 {
+                                          margin: auto;
+                                      }
                                       .container #col-sm-4__col3 {
                                           width: 100%;
                                           height: auto;
                                           margin-top: 30px;
                                           flex-wrap: wrap;
                                           justify-content: center;
+                                      }
+                                      .section3__column3 {
+                                          margin: auto;
                                       }
                                       /* ==========================SECTION4================= */
                                       .swiper__slide__image img {
@@ -703,35 +692,40 @@
                                           width: 100%;
                                           height: auto;
                                           display: flex !important;
+                                          margin-left: 5px !important;
                                           flex-wrap: wrap;
                                           justify-content: center;
                                       }
                                       .col-sm-2 #about__jurnal {
                                           width: 50%;
                                           margin-top: -100px !important;
-                                          margin-left: 200px!important;
                                           height: auto;
                                           display: block;
                                       }
                                       #foptimal {
-                                          margin-left: -25px!important;
+                                          margin-left: -100px!important;
+                                          width: 50% !important;
                                       }
                                       #about__jurnal {
                                           width: 50%;
                                           height: auto;
-                                          margin-left: 200px!important;
+                                          margin: 0 !important;
                                       }
                                       #service__work {
                                           width: 50%;
                                           height: auto;
-                                          margin-left: 200px!important;
+                                          margin: 0 !important;
                                       }
                                       #icon__boulevard {
-                                          width: 50%;
+                                          max-width: 20% !important;
                                           height: auto;
-                                          margin-left: 150px!important;
+                                          margin-top: 0px !important;
+                                          margin-left: 35px!important;
                                       }
-                                      #getin__touch {
-                                          margin-left: 200px !important;
+                                      .boulevard {
+                                          width: 100% !important;
+                                      }
+                                      .col-sm-2 #getin__touch {
+                                          max-width: 50% !important;
                                       }
                                   }
