--- a/assets/style/foptimal.css
+++ b/assets/style/foptimal.css
@@ -24,8 +24,14 @@
                                     margin-top: 100px;
                                 }
                                 
-                                .row .wow .fadeIn {
+                                .container.fadeIn {
                                     max-width: 1240px !important;
+                                    align-items: center;
+                                }
+                                
+                                .row .wow .fadeIn {
+                                    width: 800px !important;
+                                    align-items: center !important;
                                     margin: auto !important;
                                 }
                                 /*============================START NAVIGATION===================== */
@@ -35,10 +41,11 @@
                                     padding: 0;
                                     max-width: 100%;
                                     height: 752px;
-                                    background-image: url('../images/Hero background.svg');
+                                    background-image: linear-gradient( to bottom, rgba(49, 48, 48, 0.5), rgba(49, 48, 48, 0.5), rgba(49, 48, 48, 0.5), #1C1C1C), url("../images/Hero background.svg");
                                     background-repeat: no-repeat;
                                     background-size: cover;
                                     background-position: center center;
+                                    border: none;
                                 }
                                 
                                 .view {
@@ -46,12 +53,12 @@
                                     height: 100%;
                                     margin: 0;
                                     padding: 0;
-                                    background-color: rgba(49, 49, 49, 0.8);
+                                    /* background-color: rgba(49, 49, 49, 0.8);
                                     background: -moz-linear-gradient(top, rgba(49, 49, 49, 0.4) 10%, #1C1C1C 30%);
                                     background: -o-linear-gradient(top, rgba(49, 49, 49, 0.4) 10%, #1C1C1C 30%);
                                     background: -ms-linear-gradient(top, rgba(49, 49, 49, 0.4) 10%, #1C1C1C 30%);
                                     background: -webkit-gradient(linear, left top, left bottom, color-stop(0.3, rgba(49, 49, 49, 0.4)), color-stop(0.9, #1C1C1C));
-                                    opacity: 2.5;
+                                    opacity: 2.5; */
                                 }
                                 
                                 .navbar {
