--- a/assets/style/foptimal.css
+++ b/assets/style/foptimal.css
@@ -41,7 +41,7 @@
                                     padding: 0;
                                     max-width: 100%;
                                     height: 752px;
-                                    background-image: linear-gradient( to bottom, rgba(49, 48, 48, 0.5), rgba(49, 48, 48, 0.5), rgba(49, 48, 48, 0.5), #1C1C1C), url("../images/Hero background.svg");
+                                    background-image: linear-gradient( to bottom, rgba(49, 48, 48, 0.4), rgba(49, 48, 48, 0.4), rgba(49, 48, 48, 0.4), #1C1C1C), url("../images/Hero background.svg");
                                     background-repeat: no-repeat;
                                     background-size: cover;
                                     background-position: center center;
@@ -575,7 +575,7 @@
                                 }
                                 
                                 .container #section3__row {
-                                    width: 1240px !important;
+                                    width: 1240px;
                                     height: 215px !important;
                                     margin-left: -15px!important;
                                 }
@@ -804,7 +804,7 @@
                                 
                                 @import url(https://fonts.googleapis.com/css?family=Raleway);
                                 .mySwiper {
-                                    max-width: 1240px !important;
+                                    width: 1600px !important;
                                     height: 881px !important;
                                     margin-top: 117px !important;
                                 }
@@ -843,10 +843,6 @@
                                     -moz-transition: all 0.4s ease-in-out 0s;
                                     transition: all 0.4s ease-in-out 0s
                                 }
-                                /* #swiper1__slide1__section52 {
-                        margin-left: 0px !important;
-                    }
-                     */
                                 
                                 .swiper-slide:hover .swiper-slide-overlay {
                                     opacity: 1
@@ -917,10 +913,10 @@
                                 }
                                 
                                 #swiper-wrapper4 {
-                                    width: 1240px !important;
+                                    width: 1600px !important;
                                     height: 881px !important;
                                     margin-top: 86px !important;
-                                    margin-left: -440px !important;
+                                    margin-left: -560px!important;
                                     overflow: visible !important;
                                 }
                                 
@@ -1015,13 +1011,13 @@
                                 /* ================SECTION5========================= */
                                 
                                 #container__section5 {
-                                    max-width: 1240px !important;
+                                    width: 1373px !important;
                                     height: 636px !important;
                                     margin-top: 116px !important;
                                 }
                                 
                                 #swiper-wrapper5 {
-                                    width: 1240px !important;
+                                    width: 1373px !important;
                                     height: 493px !important;
                                     margin-top: 86px !important;
                                     margin-left: -426px !important;
@@ -1063,7 +1059,6 @@
                                     width: 431px !important;
                                     height: 325px !important;
                                     margin: auto;
-                                    /* margin-left: 39px !important; */
                                 }
                                 
                                 #pagination2 {
